--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docs": "ng build --prod --output-path=docs --base-href=https://assafsun.github.io/ngx-msagl/ --base-href=https://assafsun.github.io/ngx-msagl/"
   },
   "private": true,
   "dependencies": {
