--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "13.3.3",
     "@angular/platform-browser-dynamic": "13.3.3",
     "@angular/router": "13.3.3",
+    "@ngneat/until-destroy": "^9.0.2",
     "@swimlane/ngx-graph": "^8.0.0",
     "d3-scale": "^4.0.2",
     "msagl-js": "0.0.55",
